--- a/lists/templates/home.html
+++ b/lists/templates/home.html
@@ -9,7 +9,7 @@
             <input name='item_text' id='id_new_item' placeholder='Enter a to-do item'/>
             {% csrf_token %}
         </form>
-        <table id='id_list_item'>
+        <table id='id_list_table'>
             <tr><td>1: {{ new_item_text }}</td></tr>
         </table>
     </body>
