--- a/lists/templates/base.html
+++ b/lists/templates/base.html
@@ -11,6 +11,16 @@
     
     <body>
         <div class="container">
+            <nav class="navbar navbar-default" role="navigation">
+                <div class="container-fluid">
+                    <a class="navbar-brand" href="/">Superlists</a>
+                    <form class="navbar-form navbar-right" method="POST" action="#">
+                        <span>Enter email to log in:</span>
+                        <input class="form-control" name="email" type="text" />
+                        {% csrf_token %}
+                    </form>
+                </div>
+            </nav>
           <div  class="col-xs-offset-3 col-xs-6 jumbotron">
               <div class="text-center">
                 <h1>{% block header_text %}{% endblock %}</h1>
