--- a/lists/templates/my_lists.html
+++ b/lists/templates/my_lists.html
@@ -5,10 +5,10 @@
 {% block list_form %} {% endblock %}
 
 {% block extra_content %}
-	<h1>{{ owner.name }}'s lists</h1>
+	<h1>{{ owner.email }}'s lists</h1>
 	<ul>
 		{% for list in owner.list_set.all %}
-			<li><a href="list.get_absolute_url">{{ list.name }}</a></li>
+			<li><a href="{{ list.get_absolute_url }}">{{ list.name }}</a></li>
 		{% endfor %}
 	</ul>
 {% endblock %}
